@@ -1,8 +1,7 @@
 <p>test</p>
 <p><br /></p>
 <p>test</p>
-<p><br />
-Test topic.</p>
+<p>Test topic.</p>
 <p>test</p>
 <p><a href="/wiki/en/Special:Edit?topic=Non_existent_topic" class="edit" title="non existent topic">non existent topic</a></p>
 <p><b>THIS IS A TEST</b></p>
@@ -10,8 +9,7 @@ Test topic.</p>
 <p><b>THIS IS A TEST</b></p>
 <p>{{subst: Non-Existent Template}}</p>
 <p>6</p>
-<p><br />
-Test topic.</p>
+<p>Test topic.</p>
 <p>content = Template4</p>
 <table>
 <tr>
